Making changes to index.html file. Still ongoing. Added css bootstrap theme.

--- a/Client/index.html
+++ b/Client/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>jQuery AJAX POST Form</title>
+    <title>Movie Library</title>
     <meta charset="utf-8">
+    <meta name="description" content="Movie Database">
+    <link rel="stylesheet" type="text/css" href="movieLibrary.css">
 </head>
 <body>
 
