Added GetAllData function to get all data from database, added List All Movies button to index.html.

--- a/Client/index.html
+++ b/Client/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title>Movie Library</title>
@@ -11,6 +11,7 @@
 <div id="response">
     <pre></pre>
 </div>
+<button id="getall" type="button">List All Movies</button>
 
 <form id="my-form">
     <input type="text" name="title" placeholder="Title" />
