--- a/Client/index.html
+++ b/Client/index.html
@@ -11,15 +11,28 @@
 <div id="response">
     <pre></pre>
 </div>
-<button id="getall" type="button">List All Movies</button>
+
 
 <form id="my-form">
     <input type="text" name="title" placeholder="Title" />
     <input type="text" name="director" placeholder="Director" />
     <input type="text" name="genre" placeholder="Genre" />
 
-    <button type="submit">Submit</button>
+    <button type="submit">Add Movie</button>
 </form>
+
+<button id="getall" type="button">List All Movies</button>
+
+<table class="table table-striped table-bordered table-hover table-condensed">
+    <thead>
+        <tr>
+            <th>Title</th>
+            <th>Director</th>
+            <th>Genre</th>
+        </tr>
+    </thead>
+    <tbody id="movieTable"></tbody>
+</table>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="./app.js"></script>
