In MovieController, added Update action to update a movie in database. It is called from Put and Post (when movie id is already found when posting). Changed Post to lookup movie by Id and if found, will update existing row in database. In index.html, added ids for form and added hidden form field for movieId. In app.js, added MovieId to processForm and reset it to null once completed. Updated appendMovie function's td with classes and added an updateMovie on click action. Added UpdateMovie function to rename form button to Update Movie, set values to the table values, and set movieId to the movie's Id.

--- a/Client/index.html
+++ b/Client/index.html
@@ -14,14 +14,12 @@
 
 
 <form id="my-form">
-    <input type="text" name="title" placeholder="Title" />
-    <input type="text" name="director" placeholder="Director" />
-    <input type="text" name="genre" placeholder="Genre" />
-
+    <input id="formTitle" type="text" name="title" placeholder="Title" />
+    <input id="formDirector" type="text" name="director" placeholder="Director" />
+    <input id="formGenre" type="text" name="genre" placeholder="Genre" />
+    <input id="formMovieId" type="hidden" name="movieId" />
     <button type="submit">Add Movie</button>
 </form>
-
-<button id="getall" type="button">List All Movies</button>
 
 <table class="table table-striped table-bordered table-hover table-condensed">
     <thead>
