--- a/Client/index.html
+++ b/Client/index.html
@@ -5,13 +5,16 @@
     <meta charset="utf-8">
     <meta name="description" content="Movie Database">
     <link rel="stylesheet" type="text/css" href="movieLibrary.css">
+    <img class="center-fit" src="movies.jpg">
 </head>
+
 <body>
+
+<p><h1><center>Movie Library</h1></center></p>
 
 <div id="response">
     <pre></pre>
 </div>
-
 
 <form id="my-form">
     <input id="formTitle" type="text" name="title" placeholder="Title" />
@@ -20,13 +23,14 @@
     <input id="formMovieId" type="hidden" name="movieId" />
     <button type="submit">Add Movie</button>
 </form>
-
+<br>
 <table class="table table-striped table-bordered table-hover table-condensed">
     <thead>
         <tr>
             <th>Title</th>
             <th>Director</th>
             <th>Genre</th>
+            <th>Options</th>
         </tr>
     </thead>
     <tbody id="movieTable"></tbody>
